--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="JOGLO-JATENG"/>
     <meta property="og:description" content="JOGLO-JATENG Website Berita Terkini Jawa Tengah."/>
     <meta property="og:website" content="website"/>
-    <link rel="canonical" href="https://joglo-jateng.github.io/berita/"/>
+    <link rel="canonical" href="https://joglo-jateng.github.io/news/"/>
         <style>
         body {
             margin: 0;
