--- a/rekomendasi-bermain-game-pragmaticplay-saat-ngabuburit.html
+++ b/rekomendasi-bermain-game-pragmaticplay-saat-ngabuburit.html
@@ -314,7 +314,7 @@
                     menghibur. Game ini memiliki 243 cara untuk menang dan memiliki fitur Sticky Wilds dan Raining Wilds
                     yang dapat meningkatkan peluang kemenangan.</p>
                 <p>
-                    <stong>Untuk alasan apa itu cocok untuk ngabuburit?</stong>
+                    <strong>Untuk alasan apa itu cocok untuk ngabuburit?</strong>
                 </p>
                 <ul>
                     <li>Tema anjing yang menghibur dan lucu</li>
